Gopkg.toml,showcase.yamlの修正

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,21 +26,27 @@
 
 [[constraint]]
    name="github.com/labstack/echo"
+   version="3.3.10"
 
 [[constraint]]
    name="github.com/labstack/echo-contrib"
+   version="0.5.2"
 
 [[constraint]]
    name="github.com/srinathgs/mysqlstore"
+   branch="master"
 
 [[constraint]]
    name="github.com/pborman/uuid"
+   version="1.2"
 
 [[constraint]]
    name="golang.org/x/crypto"
+   branch="master"
 
 [[constraint]]
    name="github.com/jmoiron/sqlx"
+   version="1.2.0"
 
 [prune]
   go-tests = true
