--- a/showcase.yaml
+++ b/showcase.yaml
@@ -10,6 +10,6 @@ startup: |
   ln -s `pwd`/ $REPO
   cd $REPO
   dep ensure -v
-  go build -o main ./router
+  go build -o main
 
 http_proxy: 11400
