--- a/showcase.yaml
+++ b/showcase.yaml
@@ -2,6 +2,8 @@ type: runtime
 
 entrypoint: ./main
 
+use_mariadb: false
+
 startup: |
   PATH=$PATH:$GOPATH/bin
   NS=$GOPATH/src/git.trapti.tech/mazrean
