--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   backend:
+    container_name: Q-n-A_backend
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,6 +15,7 @@ services:
       - mariadb
 
   frontend:
+    container_name: Q-n-A_frontend
     build:
       context: ./dev
       dockerfile: Dockerfile
@@ -24,6 +26,7 @@ services:
       - dev-env
 
   mariadb:
+    container_name: Q-n-A_mariadb
     image: mariadb:latest
     restart: always
     environment:
@@ -33,6 +36,7 @@ services:
       - db:/var/lib/mysql
 
   phpmyadmin:
+    container_name: Q-n-A_phpmyadmin
     image: phpmyadmin/phpmyadmin:latest
     restart: always
     environment:
