Modifiled setting files for frontend container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     build:
       context: ../dev
       dockerfile: Dockerfile
+    volumes:
+      - ../frontend/devcontainer/Caddyfile:/etc/caddy/Caddyfile:ro
     ports:
       - "9001:80"
     depends_on:
