airによるホットリロードを導入 - デバッグ環境 -> ホットリロード環境へ - 開発用設定ファイルディレクトリの整理

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,10 +19,10 @@ services:
   frontend:
     container_name: Q-n-A_frontend
     build:
-      context: ../dev
+      context: ../dev/frontend
       dockerfile: Dockerfile
     volumes:
-      - ../frontend/devcontainer/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ../dev/frontend/devcontainer/Caddyfile:/etc/caddy/Caddyfile:ro
     ports:
       - "9001:80"
     depends_on:
