--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,7 @@ updates:
       interval: "daily"
 
   - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/frontend" # Location of package manifests
+    directory: "/dev" # Location of package manifests
     schedule:
       interval: "daily"
 
