--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,11 @@ updates:
     schedule:
       interval: "daily"
 
+  - package-ecosystem: "docker" # See documentation for possible values
+    directory: "/dev/frontend" # Location of package manifests
+    schedule:
+      interval: "daily"
+
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
