--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -8,7 +8,7 @@ on:
 env:
   IMAGE_NAME: q-n-a
   IMAGE_TAG: master
-  DEPLOY_REPO: https://github.com/Q-n-A-dev-team/dev-deploy
+  DEPLOY_REPO: dev-deploy
 
 jobs:
   build:
@@ -36,7 +36,7 @@ jobs:
           context: .
           push: true
           platforms: ${{ matrix.platform }}
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          tags: ghcr.io/q-n-a-dev-team/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
   scan:
     name: Scan Image Vulnerability
@@ -46,37 +46,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Pull docker image
-        run: docker pull ghcr.io/traptitech/${IMAGE_NAME}:${IMAGE_TAG}
+        run: docker pull ghcr.io/q-n-a-dev-team/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
       - name: Container image scan
         uses: Azure/container-scan@v0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          image-name: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          image-name: ghcr.io/q-n-a-dev-team/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
   deploy:
     name: Create PR to dev-deploy repo
     runs-on: ubuntu-latest
     needs: [build, scan]
     steps:
-      - name: Clone dev-deploy repository
-        run: git clone ${{ env.DEPLOY_REPO }}
+      - name: Setting up dev-deploy repository
+        run: |
+          echo "${{ secrets.DEV_DEPLOY_KEY }}" > ~/deploy_key.pem
+          chmod 600 ~/deploy_key.pem
+          git clone https://github.com/Q-n-A-dev-team/${{ env.DEPLOY_REPO }}
+          cd ${{ env.DEPLOY_REPO }}
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github"
       - name: Make log file
         run: |
+          cd ${{ env.DEPLOY_REPO }}
           mkdir -p deploy-log/backend
           echo "Deployment of backend-${{ github.sha }}" >> deploy-log/backend/${{ github.sha }}.txt
-      - name: Checkout to another branch
-        run: |
-          git checkout -b backend-${{ github.sha }}
-      - name: git setting
-        run: |
-          git config --local user.email "git@github.com"
-          git config --local user.name "Q'n'A backend"
-      - name: Commit & push files
-        run: |
-          git commit -m "Requesting deployment of backend-${{ github.sha }}" -a
-          git push origin backend-${{ github.sha }}
-      - name: Create pull request
-        run: gh pr create -R ${{ env.DEPLOY_REPO }} -H backend-${{ github.sha }} -t "Requesting deployment of backend-${{ github.sha }}"
+      - name: Commit & push & Create pull request
         env:
-          AUTHOR: ${{ github.event.pusher.name }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_SSH_COMMAND: ssh -i ~/deploy_key.pem -o StrictHostKeyChecking=no -F /dev/null
+        run: |
+          cd ${{ env.DEPLOY_REPO }}
+          git add .
+          git commit -m "Requesting deployment of backend-${{ github.sha }}"
+          git push origin backend-${{ github.sha }}
+          gh pr create -R Q-n-A-dev-team/${{ env.DEPLOY_REPO }} -H backend-${{ github.sha }} -t "Requesting deployment of backend-${{ github.sha }}"
