--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -14,9 +14,6 @@ env:
 jobs:
   build:
     name: Build Docker Image
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,7 +33,7 @@ jobs:
         with:
           context: .
           push: true
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64, linux/arm64
           tags: ghcr.io/q-n-a-dev-team/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
   scan:
@@ -55,9 +52,8 @@ jobs:
           image-name: ghcr.io/q-n-a-dev-team/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
   deploy:
-    name: Create PR to dev-deploy repo
+    name: Push to dev-deploy repo
     runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - name: Setting up repository
         uses: actions/checkout@v2
@@ -76,16 +72,11 @@ jobs:
           echo "Deployment of ${{ env.SIDE }}-${{ github.sha }}" >> deploy-log/${{ env.SIDE }}/${{ github.sha }}.txt
       - name: Commit
         run: |
-          git checkout -b ${{ env.SIDE }}-${{ github.sha }}
           git add .
           git commit -m "Requesting deployment of ${{ env.SIDE }}-${{ github.sha }}"
       - name: Push
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.DEPLOY_PAT }}
-          branch: ${{ env.SIDE }}-${{ github.sha }}
+          branch: master
           repository: Q-n-A-dev-team/${{ env.DEPLOY_REPO }}
-      - name: Create PR
-        env:
-          GH_TOKEN: ${{ secrets.DEPLOY_PAT }}
-        run: gh pr create -R Q-n-A-dev-team/${{ env.DEPLOY_REPO }} -H ${{ env.SIDE }}-${{ github.sha }} -t "Requesting deployment of ${{ env.SIDE }}" -b "On ${{ github.sha }}"
